tests/fixtures/LatestTests/TypeConversionFunctionTests/errors/too_many_arguments.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Int32(1, 2))

